--- a/autotask_web_app/templates/home.html
+++ b/autotask_web_app/templates/home.html
@@ -147,7 +147,14 @@
                     <div class="kl-title-block clearfix text-left tbk-symbol-- tbk-icon-pos--before-title">
                         <h3 class="tbk__title ">AUTOTASK INPUT VALIDATION</h3>
                         <div class="tbk__text">
-                            <p style="margin-bottom: 20px; color: rgb(83, 83, 83); font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22.1px; background-color: rgb(245, 245, 245);">Ever experienced issues with validating input for Autotask? A wrong work type on a time entry can lead to an embarassing complaint from a customer who recieved an invoice 3 times what they were expecting.</p><p style="margin-bottom: 20px; color: rgb(83, 83, 83); font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22.1px; background-color: rgb(245, 245, 245);">You may have an extensive library of LiveReports scheduled to catch such errors, but there is just one problem.</p><p style="margin-bottom: 20px; color: rgb(83, 83, 83); font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22.1px; background-color: rgb(245, 245, 245);">It's all in the past, like <span class="fw-semibold">autotask screenshots</span>, capturing errors that have already happened.</p><p style="margin-bottom: 20px; color: rgb(83, 83, 83); font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22.1px; background-color: rgb(245, 245, 245);">These minor errors can cause huge problems. Wouldn't it be great if you could stop these errors from happening? Stop it dead, at the source, by validating the input directly from the engineer. Your <span class="fw-semibold">Autotask ticketing system</span> deserves to be data-error free.</p><p style="margin-bottom: 20px; color: rgb(83, 83, 83); font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22.1px; background-color: rgb(245, 245, 245);">Autotask Validation utilises highly advanced and customisable back-end Autotask input validation. However you need to organise your data, we can write validation tests to accomodate.</p></div></div><div class="text_box">
+                            <p>Ever experienced issues with validating input for Autotask? A wrong work type on a time entry can lead to an embarassing complaint from a customer who recieved an invoice 3 times what they were expecting.</p>
+                            <p>You may have an extensive library of LiveReports scheduled to catch such errors, but there is just one problem.</p>
+                            <p>It's all in the past, like <span class="fw-semibold">autotask screenshots</span>, capturing errors that have already happened.</p>
+                            <p>These minor errors can cause huge problems. Wouldn't it be great if you could stop these errors from happening? Stop it dead, at the source, by validating the input directly from the engineer. Your <span class="fw-semibold">Autotask ticketing system</span> deserves to be data-error free.</p>
+                            <p>Autotask Validation utilises highly advanced and customisable back-end Autotask input validation. No matter how your business organises it's data or manages it's processes for Autotask, our application will be able to accomodate your validation testing requirements.</p>
+                          </div>
+                        </div>
+                        <div class="text_box">
                     </div>
                 </div>
             </div>
@@ -195,7 +202,7 @@
                            You won't have to break from your existing workflow that your engineers and sales staff have already gotten used to.
                         </p>
                         <p>
-                             By utilizing LiveLinks you can configure Autotask to send the relevent data to the validation software for when you create tickets.
+                             By utilizing LiveLinks you can configure Autotask to send the relevent data to the validation software for when you create tickets or other Autotask entities.
                         </p>
                         <p>
                              For example, create a new service desk ticket by going to <strong>LiveLinks -&gt; Create Ticket</strong> rather than New -&gt; Ticket.
@@ -217,91 +224,89 @@
         </div>
     </section>
     <!--/ Device Right Sided Vector Element --><!-- Steps Box 1 Style 2 Element -->
-    <section class="hg_section p-0">
-        <div class="hg_section_size container">
+    <section class="hg_section hg_section--relative">
+        <div class="kl-bg-source editContent">
+            <div class="kl-bg-source__bgimage" style="background-image:url({% static 'img/meeting3.jpg' %});background-repeat:no-repeat;background-attachment:scroll;background-position-x:center;background-position-y:center;background-size:cover">
+            </div>
+            <div class="kl-bg-source__overlay" style="background-color:rgba(53,53,53,0.8)">
+            </div>
+        </div>
+        <div class="hg_section_size container editContent">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div class="process_steps process_steps--style2 kl-bgc-light">
-                        <div class="process_steps__step process_steps__intro process_steps__height">
-                            <div class="process_steps__intro-wrp editContent">
-                                <h3 class="process_steps__intro-title">autotask input validation<strong>in 3 steps</strong></h3>
-                                <p class="process_steps__intro-desc">
-                                     Getting started with highly advanced autotask input validation is simple.
-                                </p>
-                                <p style="margin-bottom: 8px" class="process_steps__intro-desc">
-                                     Stay within your existing workflow yet harness the incredible power of customizable validation.
+                    <div class="infobox3" style="background-repeat:no-repeat;background-size:cover;background-position:center center;background-attachment:scroll;">
+                        <div class="row">
+                            <div class="ib-content infobox3--light col-sm-12 col-lg-12">
+                                <h3 class="ib-content__title m_title"><span class="fw-thin">
+                                  <span class="fw-semibold">Conditional rules</span> allow you to define when your validations trigger</span></h3>
+                                <p>
+                                  Your staff shouldn't feel like they are contained within small boxes. Want to send just a warning instead of refusing to complete the action? No problem, you can also <span class="fw-semibold">set individual validations to be mandatory or not.</span>
                                 </p>
                             </div>
-                        </div>
-                        <!-- end step -->
-                        <div class="process_steps__container">
-                            <div class="process_steps__inner process_steps__height">
-                                <div class="process_steps__step">
-                                    <div class="process_steps__step-icon process_steps__step-typeimg editContent">
-                                      <i style="color: red;" class="fa fa-users" aria-hidden="true"></i>
-                                    </div>
-                                    <h3 class="process_steps__step-title editContent">create an account</h3>
-                                    <p class="process_steps__step-desc editContent">
-                                         Select your plan and get your users signed up with an account, all you need is an email address and a company credit card!
-                                    </p>
-                                </div>
-                                <div class="process_steps__step">
-                                    <div class="process_steps__step-icon process_steps__step-typeimg editContent">
-                                      <i style="color: red;" class="fa fa-cogs" aria-hidden="true"></i>
-                                    </div>
-                                    <h3 class="process_steps__step-title editContent">configure autotask</h3>
-                                    <p class="process_steps__step-desc editContent">
-                                         Get started with your Autotask login credentials and create a picklist module for use with your account.
-                                    </p>
-                                </div>
-                                <div class="process_steps__step">
-                                    <div class="process_steps__step-icon process_steps__step-typeimg editContent">
-                                      <i style="color: red;" class="fa fa-rocket" aria-hidden="true"></i>
-                                    </div>
-                                    <h3 class="process_steps__step-title editContent">create validations</h3>
-                                    <p class="process_steps__step-desc editContent">
-                                         Create a validation group, then add individual validations specific to that group. Eg. Diagnostic Ticket.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.steps-container -->
-                        <div class="clearfix">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-        <!-- Call-out Banner Style 2 Element -->
-        <section class="hg_section p-0">
-            <div class="hg_section_size container">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <div class="callout-banner clearfix">
-                            <div class="row">
-                                <div class="col-sm-10 editContent">
-                                    <h3 class="m_title"><span class="fw-thin">Don't worry, we are here for your <span class="fw-semibold">Autotask Support</span> for input validations too.</span></h3>
-                                    <p>
-                                         We'll help you get started with navigating your profile dashboard, configuring the Autotask login settings, creating your picklist module and finally creating, configuring, editing and deleting your validation groups and validations.
-                                    </p>
+    <section class="hg_section">
+        <div class="hg_section_size container">
+            <div class="row">
+              <div class="col-md-6 col-sm-6">
+                <div class="el-devimages el-devimages--type-img el-devimages--rtl">
+                  <div class="el-devimages__laptop el--appear el--appear-sfl el--appeared editContent" style="outline: none; cursor: inherit;">
+                    <div class="el-devimages__laptop-img " style="background-image:url({% static 'img/atvalidation.jpg' %});">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-6 editContent" style="outline: none; cursor: inherit;">
+                <div class="kl-title-block clearfix text-left tbk-symbol-- tbk-icon-pos--before-title">
+                  <h3 class="tbk__title ">REAL-TIME VALIDATION FEEDBACK</h3>
+                  <div class="tbk__text">
+                    <p></p>
+                    <p>This application is built with the end user in mind. Get instant feedback on the <span class="fw-semibold">Autotask object</span> you are creating in real time as you are completing the form.</p>
+                    <p>If your form input triggers one of the conditional arguments configured for a validation group, a helpful message will instantly appear with the relevent information to make sure you know what's gone wrong and what you need to do to fix it.</p>
+                    <p>By hiding all of the validation configuration from the end user, there is far less setup required per employee and no additional training required. If you want to make sure specific scenarios are handled just the way your processes define, Autotask Validation gives you the freedom to do just that.</p>
+                    <p><span class="fw-semibold">You can also define individual validation tests to be passed as either a warning, or mandatory.</p></span>
+                    <p>A mandatory validation will prevent any action from being taken, the user will not be able to submit the form until the validation test has passed.</p>
+                    <p>However, there may be situations where you might want to <span class="fw-semibold">inform the user that something they have selected might not be quite appropriate</span>, but it isn't mission critical and
+                    is acceptable to be fixed afterwards.</p>
+                  </div>
+                </div>
+                <div class="text_box">
+                </div>
+              </div>
+            </div>
+        </div>
+    </section>
+    <!-- Call-out Banner Style 2 Element -->
+    <section class="hg_section p-0">
+        <div class="hg_section_size container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="callout-banner clearfix">
+                        <div class="row">
+                            <div class="col-sm-10 editContent">
+                                <h3 class="m_title"><span class="fw-thin">Don't worry, we are here for your <span class="fw-semibold">Autotask Support</span> for input validations too.</span></h3>
+                                <p>
+                                     We'll help you get started with navigating your profile dashboard, configuring the Autotask login settings, creating your picklist module and finally creating, configuring, editing and deleting your validation groups and validations.
+                                </p>
+                            </div>
+                            <div class="col-sm-2 editContent">
+                                <a href="#pricing" class="circlehover with-symbol style2" data-size="" data-position="top-left" data-align="right"><span class="text">FIND OUT <span class="fw-normal">MORE</span></span><span class="symbol"><img src="/static/img/callout2.svg" alt=""></span>
+                                <div class="triangle">
+                                    <span class="play-icon"></span>
                                 </div>
-                                <div class="col-sm-2 editContent">
-                                    <a href="#pricing" class="circlehover with-symbol style2" data-size="" data-position="top-left" data-align="right"><span class="text">FIND OUT <span class="fw-normal">MORE</span></span><span class="symbol"><img src="/static/img/callout2.svg" alt=""></span>
-                                    <div class="triangle">
-                                        <span class="play-icon"></span>
-                                    </div>
-                                    </a>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Call-out Banner Style 2 Element -->
+        </div>
+    </section>
+    <!-- Call-out Banner Style 2 Element -->
 
 
 
@@ -414,7 +419,7 @@
                                 </li>
                                 <li>
                                 <div class="inner-cell">
-                                    Ticket Validation
+                                    Conditional Validation Group Triggers
                                 </div>
                                 </li>
                                 <li>
@@ -424,7 +429,7 @@
                                 </li>
                                 <li>
                                 <div class="inner-cell">
-                                     -
+                                    Ticket Validation
                                 </div>
                                 </li>
                                 <li>
