Dev/Prod env settings & frontend changes & user conditionals

--- a/autotask_web_app/static/css/custom.css
+++ b/autotask_web_app/static/css/custom.css
@@ -9,6 +9,11 @@
 /*
 * Simple style overrides or custom adds
 */
+.validatorlogin {
+    font-size: 18px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
 
 .process_steps__step {
     height: inherit !important;
