--- a/autotask_web_app/templates/home.html
+++ b/autotask_web_app/templates/home.html
@@ -54,13 +54,21 @@
                         <span class="hidden-xs">TO THE VALIDATOR</span>
                         </a>
                         </li>
+                        <li class="editContent" style="outline: none; cursor: inherit;">
+                        <a href="{% url 'account_logout' %}">
+                        <i class="fa fa-key validatorlogin" aria-hidden="true"></i>
+                        <span class="hidden-xs">LOG OUT</span>
+                        </a>
+                        </li>
                       {% else %}
+                        {% if testing123 %}
                         <li class="editContent" style="outline: none; cursor: inherit;">
                         <a href="#">
                         <i class="glyphicon glyphicon-log-in visible-xs xs-icon"></i>
                         <span class="hidden-xs">LOGIN</span>
                         </a>
                         </li>
+                        {% endif %}
                       {% endif %}
                     </ul>
                 </div>
