Edit filenames for EB

--- a/autotask_web_app/templates/home.html
+++ b/autotask_web_app/templates/home.html
@@ -155,7 +155,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="el-devimages el-devimages--type-img el-devimages--rtl">
                         <div class="el-devimages__laptop el--appear el--appear-sfl el--appeared editContent" style="outline: none; cursor: inherit;">
-                            <div class="el-devimages__laptop-img " style="background-image:url({% static 'img/validationgroup.jpg' %});">
+                            <div class="el-devimages__laptop-img " style="background-image:url({% static 'img/validationgroup.JPG' %});">
                             </div>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
               <div class="col-md-6 col-sm-6">
                 <div class="el-devimages el-devimages--type-img el-devimages--rtl">
                   <div class="el-devimages__laptop el--appear el--appear-sfl el--appeared editContent" style="outline: none; cursor: inherit;">
-                    <div class="el-devimages__laptop-img " style="background-image:url({% static 'img/atvalidation.jpg' %});">
+                    <div class="el-devimages__laptop-img " style="background-image:url({% static 'img/atvalidation.JPG' %});">
                     </div>
                   </div>
                 </div>
