Added styling to email conf pages

--- a/autotask_web_app/templates/account/password_reset_sent.html
+++ b/autotask_web_app/templates/account/password_reset_sent.html
@@ -1,26 +1,36 @@
-
-{% load i18n %}
+{% extends 'account/account_base.html' %}
+{% load staticfiles %}
 {% load account_tags %}
+{% load i18n %}
+{% block account_page %}
 
-{% block head_title %}{% trans "Password reset sent" %}{% endblock %}
+  <div class="content">
+      <!-- BEGIN LOGIN FORM -->
+          <h3 class="form-title">Confirm new password</h3>
+          <div class="create-account">
+            <form method="POST" action="{% url "account_password_reset_token" uidb36=uidb36 token=token %}" style="">
+              {% if not resend %}
+                  <p>{% blocktrans %}We have sent you an email. If you do not receive it within a few minutes, try resending or contact us at <a href="mailto:{{ THEME_CONTACT_EMAIL }}">{{ THEME_CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
 
-{% block body %}
-    <h1>{% trans "Password reset sent" %}</h1>
-    {% if not resend %}
-        <p>{% blocktrans %}We have sent you an email. If you do not receive it within a few minutes, try resending or contact us at <a href="mailto:{{ THEME_CONTACT_EMAIL }}">{{ THEME_CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
+                  <div class="row">
+                      <div class="col-md-5">
+                              {% csrf_token %}
+                              {% for field in form %}
+                                  {{ field.as_hidden }}
+                              {% endfor %}
+                              <button type="submit" name="resend" class="btn btn-primary">{% trans "Resend" %}</button>
+                          </form>
+                      </div>
+                  </div>
+              {% else %}
+                  <p>{% blocktrans %}We have resent the password email. If you do not receive it within a few minutes, contact us at <a href="mailto:{{ THEME_CONTACT_EMAIL }}">{{ THEME_CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
+              {% endif %}
+            </form>
+          </div>
+  </div>
 
-        <div class="row">
-            <div class="col-md-5">
-                <form method="POST" action="{% url "account_password_reset" %}">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {{ field.as_hidden }}
-                    {% endfor %}
-                    <button type="submit" name="resend" class="btn btn-primary">{% trans "Resend" %}</button>
-                </form>
-            </div>
-        </div>
-    {% else %}
-        <p>{% blocktrans %}We have resent the password email. If you do not receive it within a few minutes, contact us at <a href="mailto:{{ THEME_CONTACT_EMAIL }}">{{ THEME_CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
-    {% endif %}
+        <!-- END LOGO -->
+        <!-- BEGIN LOGIN -->
+
+        <!-- END LOGIN -->
 {% endblock %}
