--- a/autotask_web_app/templates/account/password_reset_token_fail.html
+++ b/autotask_web_app/templates/account/password_reset_token_fail.html
@@ -1,10 +1,19 @@
-
+{% extends 'account/account_base.html' %}
+{% load staticfiles %}
+{% load account_tags %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Bad token" %}{% endblock %}
-
-{% block body %}
-    <h1>{% trans "Bad token" %}</h1>
-    {% url "account_password_reset" as url %}
-    <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ url }}">new password reset</a>.{% endblocktrans %}</p>
+{% block account_page %}
+<div class="content">
+    <!-- BEGIN LOGIN FORM -->
+        <div class="row">
+            <div class="col-md-5">
+              <h1>Password reset no longer valid</h1>
+              {% url "account_password_reset" as url %}
+              <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ url }}">new password reset</a>.{% endblocktrans %}</p>
+            </div>
+        </div>
+</div>
+        <!-- END LOGO -->
+        <!-- BEGIN LOGIN -->
+        <!-- END LOGIN -->
 {% endblock %}
