--- a/autotask_web_app/templates/account/password_change.html
+++ b/autotask_web_app/templates/account/password_change.html
@@ -1,21 +1,22 @@
-
+{% extends 'account/account_base.html' %}
+{% load staticfiles %}
+{% load account_tags %}
 {% load i18n %}
+{% block account_page %}
 
-{% block body_class %}account account-password{% endblock %}
-
-{% block head_title %}{% trans "Change password" %}{% endblock %}
-
-{% block page %}
-    <div class="row">
-        <div class="col-md-5">
-            <form method="POST" action="">
-                <legend>{% trans "Change password" %}</legend>
-                <fieldset>
-                    {% csrf_token %}
-                    {{ form }}
-                    <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-                </fieldset>
-            </form>
+        <!-- END LOGO -->
+        <!-- BEGIN LOGIN -->
+        <div class="row">
+            <div class="col-md-5">
+                <form method="POST" action="">
+                    <legend>{% trans "Change password" %}</legend>
+                    <fieldset>
+                        {% csrf_token %}
+                        {{ form }}
+                        <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+                    </fieldset>
+                </form>
+            </div>
         </div>
-    </div>
+        <!-- END LOGIN -->
 {% endblock %}
