--- a/autotask_web_app/templates/account/password_reset_token.html
+++ b/autotask_web_app/templates/account/password_reset_token.html
@@ -1,20 +1,22 @@
-
+{% extends 'account/account_base.html' %}
+{% load staticfiles %}
+{% load account_tags %}
 {% load i18n %}
-{% load bootstrap %}
+{% block account_page %}
 
-{% block head_title %}{% trans "Set your new password" %}{% endblock %}
-
-{% block body %}
-    <div class="row">
-        <div class="col-md-5">
-            <form method="POST" action="{% url "account_password_reset_token" uidb36=uidb36 token=token %}">
-                <legend>{% trans "Set your new password" %}</legend>
-                <fieldset>
-                    {% csrf_token %}
-                    {{ form|bootstrap }}
-                    <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
-                </fieldset>
-            </form>
+<div class="content">
+    <!-- BEGIN LOGIN FORM -->
+        <h3 class="form-title">Confirm new password</h3>
+        <div class="create-account">
+          <form method="POST" action="{% url "account_password_reset_token" uidb36=uidb36 token=token %}" style="">
+              <fieldset>
+                  {% csrf_token %}
+                  {{ form }}
+                  <br>
+                  <hr>
+                  <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+              </fieldset>
+          </form>
         </div>
-    </div>
+</div>
 {% endblock %}
