--- a/autotask_web_app/templates/djstripe/confirm_form.html
+++ b/autotask_web_app/templates/djstripe/confirm_form.html
@@ -54,7 +54,7 @@
                     <div class="pricing-table-container">
                     <div class="price-column-container border-left border-top border-right">
                         <div class="price-table-head price-1">
-                            <h2 class="uppercase {% if plan.name == 'Bronze' %} bg-blue {% elif plan.name == 'Silver' %} bg-blue-steel {% elif plan.name == 'Gold' %} bg-green-jungle {% endif %} font-grey-cararra opt-pricing-5">{{ plan.name }}</h2>
+                          <h2 class="uppercase {% if plan.name == 'Starter' %} bg-yellow-gold {% elif plan.name == 'Standard' %} bg-blue-steel {% elif plan.name == 'Professional' %} bg-green-jungle {% else %} bg-green-jungle {% endif %} font-grey-cararra opt-pricing-5">{{ plan.name }}</h2>
                         </div>
                         <div class="price-table-pricing">
                             <h3>
@@ -62,30 +62,54 @@
                             <p class="uppercase">per {{ plan.interval }}</p>
                         </div>
                         <div class="price-table-content">
+                          {% if plan.feature1 %}
                             <div class="row no-margin">
                                 <div class="col-xs-3 text-right">
-                                    <i class="icon-user"></i>
+                                    <i class="{{ plan.feature1icon }}"></i>
                                 </div>
-                                <div class="col-xs-9 text-left uppercase">3 Members</div>
+                                <div class="col-xs-9 text-left uppercase">{{ plan.feature1 }}</div>
                             </div>
-                            <div class="row no-margin">
-                                <div class="col-xs-3 text-right">
-                                    <i class="icon-drawer"></i>
+                            {% endif %}
+                            {% if plan.feature2 %}
+                              <div class="row no-margin">
+                                  <div class="col-xs-3 text-right">
+                                    <i class="{{ plan.feature2icon }}"></i>
+                                  </div>
+                                  <div class="col-xs-9 text-left uppercase">{{ plan.feature2 }}</div>
+                              </div>
+                            {% endif %}
+                            {% if plan.feature3 %}
+                              <div class="row no-margin">
+                                  <div class="col-xs-3 text-right">
+                                    <i class="{{ plan.feature3icon }}"></i>
+                                  </div>
+                                  <div class="col-xs-9 text-left uppercase">{{ plan.feature3 }}</div>
+                              </div>
+                              {% endif %}
+                              {% if plan.feature4 %}
+                                <div class="row no-margin">
+                                    <div class="col-xs-3 text-right">
+                                      <i class="{{ plan.feature4icon }}"></i>
+                                    </div>
+                                    <div class="col-xs-9 text-left uppercase">{{ plan.feature4 }}</div>
                                 </div>
-                                <div class="col-xs-9 text-left uppercase">50GB Storage</div>
-                            </div>
-                            <div class="row no-margin">
-                                <div class="col-xs-3 text-right">
-                                    <i class="icon-screen-smartphone"></i>
-                                </div>
-                                <div class="col-xs-9 text-left uppercase">Single Device</div>
-                            </div>
-                            <div class="row no-margin">
-                                <div class="col-xs-3 text-right">
-                                    <i class="icon-refresh"></i>
-                                </div>
-                                <div class="col-xs-9 text-left uppercase">Monthly Backups</div>
-                            </div>
+                                {% endif %}
+                                {% if plan.feature5 %}
+                                  <div class="row no-margin">
+                                      <div class="col-xs-3 text-right">
+                                        <i class="{{ plan.feature5icon }}"></i>
+                                      </div>
+                                      <div class="col-xs-9 text-left uppercase">{{ plan.feature5 }}</div>
+                                  </div>
+                                {% endif %}
+                                {% if plan.feature6 %}
+                                  <div class="row no-margin">
+                                      <div class="col-xs-3 text-right">
+                                          <i class="{{ plan.feature6icon }}"></i>
+                                      </div>
+                                      <div class="col-xs-9 text-left uppercase">{{ plan.feature6 }}</div>
+                                  </div>
+                                {% endif %}
                         </div>
                         <div class="price-table-footer">
                           {% if customer.current_subscription.amount < plan.price|djdiv:100 %}
