--- a/autotask_web_app/templates/edit_validation_group.html
+++ b/autotask_web_app/templates/edit_validation_group.html
@@ -37,11 +37,33 @@
 <!-- BEGIN CONTENT -->
 <div class="page-content-wrapper">
   <div class="page-content">
-    <div class="row">
-      <div class="col-md-12">
-
+    <div class="portlet light bordered">
+      <div class="portlet-title">
+      <div class="caption">
+        <i class="icon-microphone font-blue-hoki"></i>
+        <span class="caption-subject bold font-blue-madison uppercase">Create Validation Group Wizard</span>
+      </div>
+    </div>
+    <div class="mt-element-step">
+      <div class="row step-line">
+        <div class="col-md-4 mt-step-col first done">
+          <div class="mt-step-number bg-white font-grey">1</div>
+          <div class="mt-step-title uppercase font-grey-cascade">Create Validation Group</div>
+          <div class="mt-step-content font-grey-cascade">Choose an Autotask entity and give the group a name</div>
+        </div>
+        <div class="col-md-4 mt-step-col {% if validation_group_rule %} done {% else %} active {% endif %}">
+          <div class="mt-step-number bg-white font-grey">2</div>
+          <div class="mt-step-title uppercase font-grey-cascade">Validation Group Trigger</div>
+          <div class="mt-step-content font-grey-cascade">Customise when this validation group is triggered</div>
+        </div>
+        <div class="col-md-4 mt-step-col last {% if existing_validations %} done {% else %} active {% endif %}">
+          <div class="mt-step-number bg-white font-grey">3</div>
+          <div class="mt-step-title uppercase font-grey-cascade">Add Validations</div>
+          <div class="mt-step-content font-grey-cascade">Create custom validations to make sure your data input is accurate</div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
 
 
 <!-- Existing rules -->
@@ -58,6 +80,7 @@
   </div>
 <div class="row" id="addrule" {% if not validation_group_rule %} style="display: none" {% endif %}> -->
 <div class="row">
+
 
 <div class="portlet light ">
   <div class="portlet-body">
@@ -136,11 +159,13 @@
 {% endif %}
     </div>
   </div>
+</div>
+</div>
+</div>
+</div>
 <!-- Existing rules -->
-</div>
-</div>
-</div>
-</div>
+
+
 <div class="portlet light"  {% if not validation_group_rule %} style="display: none" {% endif %} >
   <div class="portlet-title tabbable-line">
     <div class="caption caption-md">
