Entites now load on page load as per subscription

--- a/autotask_web_app/templates/input_validation.html
+++ b/autotask_web_app/templates/input_validation.html
@@ -61,7 +61,9 @@
                                           </div>
                                           <select name="entitytype" class="form-control">
                                             {% for entity in entitytypes %}
+                                              {% if entity.profile.id == user.profile.id %}
                                                 <option  value="{{ entity.name }}">{{ entity.name }}</option>
+                                              {% endif %}
                                             {% endfor %}
                                           </select>
                                           <br>
